# vicount

./: .gitignore  .kaptainignore  Cargo.toml  GRADE.md  LICENSE  README.md  ROADMAP.md  kaptaind.toml
.github/workflows/: ci.yml
scripts/: build-release.sh  install.sh
src/: app.rs  config.rs  history.rs  main.rs  theme.rs  types.rs  vico.rs
src/ui/: chat.rs  help.rs  input.rs  messages.rs  mod.rs  model_picker.rs  quit.rs  session_picker.rs  side_panel.rs  slash_menu.rs  status.rs
